name:                hn-tui
version:             0.1.0.0
synopsis:            Terminal User Interface for Hacker News
description:         Browse Hacker News from your Terminal
homepage:            https://github.com/dmille56/hn-tui#readme
license:             BSD3
license-file:        LICENSE
author:              Donovan Miller
--maintainer:          example@example.com
copyright:           2017 Donovan Miller
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hn-tui
  ghc-options: -threaded -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DataTypes, Events, NetworkRequests, View
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       brick,
                       text,
                       aeson,
                       time,
                       async,
                       vty,
                       transformers,
                       process,
                       tagsoup,
                       req
